--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="keywords" content="HTML, CSS">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Bhavya Gopal">
     <meta name="description" content="3 column preview card by Frontendmentor">
-
     <link rel="stylesheet" href="styles.css">
 
     <!--Importing Fonts-->
