--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="styles.css">
 
     <!--Importing Fonts-->
-    <link href="https://fonts.google.com/specimen/Lexend+Deca" rel="stylesheet" type="text/css">
-    <link href="https://fonts.google.com/specimen/Big+Shoulders+Display" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -25,17 +27,17 @@
                         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
                         or on your next road trip.
                     </p>
-                    <button type="button">Learn More</button>
+                    <button class="button">Learn More</button>
                 </h1>
             </div>
-            <div class="cards" id="SUVs">
+            <div class="cards" id="suvs">
                 <img src="./images/icon-suvs.svg" alt="suvs icon" class="icons" />
                 <h1>SUVs
                     <p>
                         Take an SUV for its spacious interior, power and versatility. Perfect for your next family
                         vacation and off-road adventures.
                     </p>
-                    <button type="button">Learn More</button>
+                    <button class="button">Learn More</button>
                 </h1>
 
             </div>
@@ -46,14 +48,14 @@
                         Cruise in the best car brands without bloated prices. Enjoy the enhanced comfort of a luxury
                         rental and arrive in style.
                     </p>
-                    <button type="button">Learn More</button>
+                    <button class="button">Learn More</button>
                 </h1>
 
             </div>
         </div>
     </section>
     <footer>
-        Challenge by Frontend Mentor, Coded by Bhavya Gopal
+        Challenge by <a href= https://www.frontendmentor.io/challenges style="color: blueviolet">Frontend Mentor</a>, Coded by <a href="https://github.com/bhavya-gopal" style= "color: blueviolet">Bhavya Gopal</a>
     </footer>
 </body>
 
